--- a/banking-frontend-angular/src/app/forgot-user-id/forgot-user-id.component.html
+++ b/banking-frontend-angular/src/app/forgot-user-id/forgot-user-id.component.html
@@ -1,49 +1,22 @@
-<div class="page-header h1">
-    <p>HFDC Bank</p>
+<div class="text-center">
+    <img src="/assets/images/hfdc-bank-logo.png" alt="hfdc-bank-logo" width="160" height="160">
 </div>
 <div class="wrapper container" style="width: 28%;">
-    <h4>Trouble Logging In-Forgot User ID ?</h4>
+    <h4>Trouble Logging In - Forgot User ID?</h4>
     <br>
     <p>Please fill in your credentials to receive your User ID.</p>
     <br>
-    
-    <form #f="ngForm" (ngSubmit)="f.form.valid && onSubmit()">
-        <div class="form-group" >
-            <label>Enter Account Number</label>
-            <input type="text" #accountNo="ngModel" [class.is-invalid]="f.submitted && accountNo.invalid"
-            class="form-control" name="accountNo" [(ngModel)]="forgotUserId.accountNo" required>
-            <div *ngIf="f.submitted && accountNo.invalid" class="invalid-feedback">
-                <div *ngIf="accountNo.errors.required">Account Number is required</div>
+    <form (ngSubmit)="f.valid && checkAccountNumber()" #f="ngForm">
+        <div class="form-group">
+            <label for="accountNumber">Account Number</label>
+            <input class="form-control" type="text" name="accountNumber" placeholder="Your 7-digit account number" [(ngModel)]="model.accountNumber" #accountNumber="ngModel" required pattern="^[0-9]{7}$">
+            <div class="alert alert-danger" *ngIf="f.submitted && accountNumber.invalid && (accountNumber.dirty || accountNumber.touched)">
+                <div *ngIf="accountNumber.errors.required">Account number is required</div>
+                <div *ngIf="accountNumber.errors.pattern">Account number must be of 7 digits</div>
             </div>
         </div>
-        
-         <button type="submit" class="btn btn-primary">Proceed</button>
+        <button type="submit" class="btn btn-primary" style="width: 100%;">Proceed</button>
     </form>
-</div>       
-
-
-  <!--<form [formGroup]="forgotUserIdForm">
-        <div class="form-group">
-            <label>Enter Account Number</label>
-            <input [class.is-invalid]="forgotUserIdForm.get('accountNo').invalid && forgotUserIdForm.get('accountNo').touched" 
-                    formControlName="accountNo" type="text" class="form-control">
-            <small class="text-danger" [class.d-none]="forgotUserIdForm.get('accountNo').valid || forgotUserIdForm.get('accountNo').untouched">Account No is required</small>
-        </div>
-
-        <div class="form-group">
-            <label>Enter OTP(One Time Password) sent to your email Id</label>
-            <input [class.is-invalid]="forgotUserIdForm.get('otp').invalid && forgotUserIdForm.get('otp').touched"
-                    formControlName="otp" type="text" class="form-control">
-            <div *ngIf="forgotUserIdForm.get('otp').invalid && forgotUserIdForm.get('otp').touched">
-                <small *ngIf="forgotUserIdForm.get('otp').errors?.required" class="text-danger">OTP is required</small>
-                <small *ngIf="forgotUserIdForm.get('otp').errors?.minLength" class="text-danger">OTP should be of minimum 6 digits</small>
-                <small *ngIf="forgotUserIdForm.get('otp').errors?.maxLength" class="text-danger">OTP should not exceed 6 digits</small>
-            </div>
-        </div>
-        <div class="form-group">
-            <input type="submit" class="btn btn-primary" value="Proceed" style="margin-left: 80px;">
-            <input type="submit" class="btn btn-primary" value="Back" style="margin-left:80px ;" >
-        </div>
-    </form>
+    <div class="alert alert-danger" *ngIf="accountDoesntExist">Account doesn't exist</div>
+    <div class="alert alert-danger" *ngIf="error">{{message}}</div>
 </div>
--->
