--- a/banking-frontend-angular/src/app/register-ib/register-ib.component.html
+++ b/banking-frontend-angular/src/app/register-ib/register-ib.component.html
@@ -82,3 +82,6 @@
         <p>Already have an account? <a href="#" routerLink="/home">Click here</a> to Login</p>
     </div>
 </div>
+<ngx-spinner bdColor="rgba(51, 51, 51, 0.8)" size="default" type="ball-scale-multiple">  
+    <p style="color: white">Please Wait. </p>  
+    </ngx-spinner> 
