added spinner in forgot user id

--- a/banking-frontend-angular/src/app/dashboard/dashboard.component.html
+++ b/banking-frontend-angular/src/app/dashboard/dashboard.component.html
@@ -3,8 +3,8 @@
         <img src="/assets/images/hfdc-bank-logo.png" alt="hfdc-bank-logo" width="100" height="100">
     </div>
     <div class="header">
-        <p href="#">HFDC Bank</p>
-        <p href="#">Welcome, {{name | uppercase}}</p>
+        <p>HFDC Bank</p>
+        <p>Welcome, {{name | uppercase}}</p>
         <ul style="float: right;">
             <li [routerLink]="['/change-password']">Change Password</li>
             <li [routerLink]="['/logout']">Logout</li>
