--- a/banking-frontend-angular/src/app/admin-dashboard/admin-dashboard.component.html
+++ b/banking-frontend-angular/src/app/admin-dashboard/admin-dashboard.component.html
@@ -1,15 +1,10 @@
 <div class="header">
-  <a>HFDC Bank</a>
+  <a routerLink="/home">HFDC Bank</a>
   <a>Welcome, {{name | uppercase}}</a>
   <div style="float: right;">
-    <a href="#" routerLink="/logout">Logout</a>
+    <a routerLink="/logout">Logout</a>
   </div>
 </div>
-<!-- <div class="text-center">
-  <img src="/assets/images/hfdc-bank-logo.png" alt="hfdc-bank-logo" width="160" height="160">
-</div> -->
-<!-- <div class="h4">Welcome, {{name | uppercase}}</div>
-<div *ngIf="error">{{message}}</div> -->
 <div class="scrollme">
   <table class="table table-striped table-bordered table-active table-responsive-md  text-nowrap">
     <thead style="background-color: #adb0c5;">
