--- a/banking-frontend-angular/src/app/admin-dashboard/admin-dashboard.component.html
+++ b/banking-frontend-angular/src/app/admin-dashboard/admin-dashboard.component.html
@@ -5,6 +5,85 @@
     <a routerLink="/logout">Logout</a>
   </div>
 </div>
+<div class="container-fluid">
+  <div class="row">
+    <div class="wrapper container" style="width: 20%;">
+      <p class="h3">Admin Approval</p>
+      <br>
+      <form (ngSubmit)="approvalForm.valid && approve()" #approvalForm="ngForm">
+        <div class="form-group">
+          <label for="refNo">Service Reference No.</label>
+          <select [(ngModel)]="adminApproval.serviceRefNo" class="form-control" name="refNo" #refNo="ngModel"
+            [ngClass]="{ 'is-invalid': approvalForm.submitted && refNo.invalid }" required>
+            <option *ngFor="let customer of customerRequestStatus.customers" value="{{customer.serviceRefNo}}">
+              {{customer.serviceRefNo}}
+            </option>
+          </select>
+          <div class="alert alert-danger"
+            *ngIf="approvalForm.submitted && refNo.invalid && (refNo.dirty || refNo.touched)">
+            <div *ngIf="refNo.errors.required">Service Reference No. is required</div>
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="response">Accept(A) / Reject(R)</label>
+          <select [(ngModel)]="adminApproval.response" class="form-control" name="response" #response="ngModel"
+            [ngClass]="{ 'is-invalid': approvalForm.submitted && response.invalid }" required>
+            <option value="A">A</option>
+            <option value="R">R</option>
+          </select>
+          <div class="alert alert-danger"
+            *ngIf="approvalForm.submitted && response.invalid && (response.dirty || response.touched)">
+            <div *ngIf="response.errors.required">Please select a response</div>
+          </div>
+        </div>
+        <div class="form-group">
+          <input type="submit" class="btn btn-primary" value="Approve">
+        </div>
+      </form>
+      <div class="alert alert-warning" role="alert" *ngIf="approvalStatus">{{approvalMessage}}</div>
+    </div>
+    <div class="wrapper container" style="width: 20%;">
+      <p class="h3">Search</p>
+      <br>
+      <form (ngSubmit)="f.valid && search()" #f="ngForm">
+        <div class="form-group">
+          <label>Service Reference No.</label>
+          <input class="form-control" type="text" name="refNo1" [(ngModel)]="serviceReferenceNumber" #refNo1="ngModel"
+            required pattern="^[0-9]{4}$">
+          <div class="alert alert-danger" *ngIf="f.submitted && refNo1.invalid && (refNo1.dirty || refNo1.touched)">
+            <div *ngIf="refNo1.errors.required">Service Reference No. is required</div>
+            <div *ngIf="refNo1.errors.pattern">Service Reference No. must be of 4 digits</div>
+          </div>
+        </div>
+        <div class="form-group">
+          <input type="submit" class="btn btn-primary" value="Search" style="width: 100%;">
+        </div>
+      </form>
+      <div class="alert alert-danger" *ngIf="wrongServicerefNo">Wrong Service Ref No.</div>
+      <div class="alert alert-danger" *ngIf="searchError">Unable to search</div>
+    </div>
+  </div>
+</div>
+<div *ngIf="searched" class="card text-white bg-secondary mx-auto" style="max-width: 30rem; margin-top: 20px;">
+  <div class="card-header">{{generatedCustomer.customer.firstName}}'s Details</div>
+  <div class="card-body">
+    <p class="card-text">Service Reference Number: {{generatedCustomer.customer.serviceRefNo}}</p>
+    <p class="card-text">First Name: {{generatedCustomer.customer.firstName}}</p>
+    <p class="card-text">Middle Name: {{generatedCustomer.customer.middleName}}</p>
+    <p class="card-text">Last Name: {{generatedCustomer.customer.lastName}}</p>
+    <p class="card-text">Father's Name: {{generatedCustomer.customer.fatherName}}</p>
+    <p class="card-text">Mobile Number: {{generatedCustomer.customer.mobileNo}}</p>
+    <p class="card-text">Email ID: {{generatedCustomer.customer.emailId}}</p>
+    <p class="card-text">Aadhaar Number: {{generatedCustomer.customer.aadhaarNo}}</p>
+    <p class="card-text">Date of Birth: {{generatedCustomer.customer.dateOfBirth}}</p>
+    <p class="card-text">Occupation: {{generatedCustomer.customer.occupationType}}</p>
+    <p class="card-text">Source of Income: {{generatedCustomer.customer.sourceOfIncome}}</p>
+    <p class="card-text">Gross Annual Income: {{generatedCustomer.customer.grossAnnualIncome}}</p>
+    <p class="card-text">Net Banking Required: {{generatedCustomer.customer.netBankingRequirement}}</p>
+    <p class="card-text">Debit Card Required: {{generatedCustomer.customer.debitCardRequirement}}</p>
+    <p class="card-text">Is Approved: {{generatedCustomer.customer.isApproved}}</p>
+  </div>
+</div>
 <div class="scrollme">
   <table class="table table-striped table-bordered table-active table-responsive-md  text-nowrap">
     <thead style="background-color: #adb0c5;">
@@ -55,45 +134,16 @@
         <td>{{customer.perAddress.state}}</td>
         <td>{{customer.perAddress.city}}</td>
         <td>{{customer.perAddress.pincode}}</td>
-        <td>{{customer.netBankingRequirement}}</td>
-        <td>{{customer.debitCardRequirement}}</td>
-        <!-- <td><button class="btn btn-success" (click)="accept(customer.serviceRefNo)">Accept</button></td>
-            <td><button class="btn btn-danger" (click)="reject(customer.serviceRefNo)">Reject</button> </td> -->
+        <td>
+          <span *ngIf="customer.netBankingRequirement === 'Y'; else netBankingNotRequired">Yes</span>
+          <ng-template #netBankingNotRequired>No</ng-template>
+        </td>
+        <td>
+          <span *ngIf="customer.debitCardRequirement === 'Y'; else netBankingNotRequired">Yes</span>
+          <ng-template #debitCardNotRequired>No</ng-template>
+        </td>
       </tr>
     </tbody>
   </table>
 </div>
 <br>
-<div class="wrapper container" style="width: 20%;">
-  <p class="h3">Admin Approval</p>
-  <br>
-  <form (ngSubmit)="approvalForm.valid && approve()" #approvalForm="ngForm">
-    <div class="form-group">
-      <label for="refNo">Service Reference No.</label>
-      <select [(ngModel)]="adminApproval.serviceRefNo" class="form-control" name="refNo"
-          #refNo="ngModel" [ngClass]="{ 'is-invalid': approvalForm.submitted && refNo.invalid }" required>
-          <option *ngFor="let customer of customerRequestStatus.customers" value="{{customer.serviceRefNo}}">
-            {{customer.serviceRefNo}}
-          </option>
-        </select>
-      <div class="alert alert-danger" *ngIf="approvalForm.submitted && refNo.invalid && (refNo.dirty || refNo.touched)">
-        <div *ngIf="refNo.errors.required">Service Reference No. is required</div>
-      </div>
-    </div>
-    <div class="form-group">
-      <label for="response">Accept(A) / Reject(R)</label>
-      <select [(ngModel)]="adminApproval.response" class="form-control" name="response"
-          #response="ngModel" [ngClass]="{ 'is-invalid': approvalForm.submitted && response.invalid }" required>
-          <option value="A">A</option>
-          <option value="R">R</option>
-        </select>
-      <div class="alert alert-danger" *ngIf="approvalForm.submitted && response.invalid && (response.dirty || response.touched)">
-        <div *ngIf="response.errors.required">Please select a response</div>
-      </div>
-    </div>
-    <div class="form-group">
-      <input type="submit" class="btn btn-primary" value="Approve">
-    </div>
-  </form>
-  <div class="alert alert-warning" role="alert" *ngIf="approvalStatus">{{approvalMessage}}</div>
-</div>
