button in track appl

--- a/banking-frontend-angular/src/app/track-application/track-application.component.html
+++ b/banking-frontend-angular/src/app/track-application/track-application.component.html
@@ -1,6 +1,7 @@
 <div class="text-center">
     <img src="/assets/images/hfdc-bank-logo.png" alt="hfdc-bank-logo" width="160" height="160">
 </div>
+<div class="text-center"><a [routerLink]="['/home']"><button class="btn btn-primary" type="submit" > Home</button></a></div>
 <div class="wrapper container" style="width: 28%;">
     <p class="h3">Track Application</p>
     <br>
