--- a/banking-frontend-angular/src/app/admin-dashboard/admin-dashboard.component.html
+++ b/banking-frontend-angular/src/app/admin-dashboard/admin-dashboard.component.html
@@ -5,66 +5,68 @@
     <a routerLink="/logout">Logout</a>
   </div>
 </div>
-<div class="container-fluid">
-  <div class="row">
-    <div class="wrapper container" style="width: 20%;">
-      <p class="h3">Admin Approval</p>
-      <br>
-      <form (ngSubmit)="approvalForm.valid && approve()" #approvalForm="ngForm">
-        <div class="form-group">
-          <label for="refNo">Service Reference No.</label>
-          <select [(ngModel)]="adminApproval.serviceRefNo" class="form-control" name="refNo" #refNo="ngModel"
-            [ngClass]="{ 'is-invalid': approvalForm.submitted && refNo.invalid }" required>
-            <option *ngFor="let customer of customerRequestStatus.customers" value="{{customer.serviceRefNo}}">
-              {{customer.serviceRefNo}}
-            </option>
-          </select>
-          <div class="alert alert-danger"
-            *ngIf="approvalForm.submitted && refNo.invalid && (refNo.dirty || refNo.touched)">
-            <div *ngIf="refNo.errors.required">Service Reference No. is required</div>
-          </div>
-        </div>
-        <div class="form-group">
-          <label for="response">Accept(A) / Reject(R)</label>
-          <select [(ngModel)]="adminApproval.response" class="form-control" name="response" #response="ngModel"
-            [ngClass]="{ 'is-invalid': approvalForm.submitted && response.invalid }" required>
-            <option value="A">A</option>
-            <option value="R">R</option>
-          </select>
-          <div class="alert alert-danger"
-            *ngIf="approvalForm.submitted && response.invalid && (response.dirty || response.touched)">
-            <div *ngIf="response.errors.required">Please select a response</div>
-          </div>
-        </div>
-        <div class="form-group">
-          <input type="submit" class="btn btn-primary" value="Approve">
-        </div>
-      </form>
-      <div class="alert alert-warning" role="alert" *ngIf="approvalStatus">{{approvalMessage}}</div>
-    </div>
-    <div class="wrapper container" style="width: 20%;">
-      <p class="h3">Search</p>
-      <br>
-      <form (ngSubmit)="f.valid && search()" #f="ngForm">
-        <div class="form-group">
-          <label>Service Reference No.</label>
-          <input class="form-control" type="text" name="refNo1" [(ngModel)]="serviceReferenceNumber" #refNo1="ngModel"
-            required pattern="^[0-9]{4}$">
-          <div class="alert alert-danger" *ngIf="f.submitted && refNo1.invalid && (refNo1.dirty || refNo1.touched)">
-            <div *ngIf="refNo1.errors.required">Service Reference No. is required</div>
-            <div *ngIf="refNo1.errors.pattern">Service Reference No. must be of 4 digits</div>
-          </div>
-        </div>
-        <div class="form-group">
-          <input type="submit" class="btn btn-primary" value="Search" style="width: 100%;">
-        </div>
-      </form>
-      <div class="alert alert-danger" *ngIf="wrongServicerefNo">Wrong Service Ref No.</div>
-      <div class="alert alert-danger" *ngIf="searchError">Unable to search</div>
-    </div>
-  </div>
+<br>
+<div>
+  <button type="button" class="btn btn-secondary btn-lg btn-block" (click)="showPendingRequests()">Show Pending
+    Requests</button>
+  <button type="button" class="btn btn-secondary btn-lg btn-block" (click)="showApprovalForm()">Approve Pending Requests</button>
+  <button type="button" class="btn btn-secondary btn-lg btn-block" (click)="showSearchForm()">Search For a Customer</button>
 </div>
-<div *ngIf="searched" class="card text-white bg-secondary mx-auto" style="max-width: 30rem; margin-top: 20px;">
+<div *ngIf="showApprovalToggle" class="wrapper container" style="width: 20%;">
+  <p class="h3">Admin Approval</p>
+  <br>
+  <form (ngSubmit)="approvalForm.valid && approve()" #approvalForm="ngForm">
+    <div class="form-group">
+      <label for="refNo">Service Reference No.</label>
+      <select [(ngModel)]="adminApproval.serviceRefNo" class="form-control" name="refNo" #refNo="ngModel"
+        [ngClass]="{ 'is-invalid': approvalForm.submitted && refNo.invalid }" required>
+        <option *ngFor="let customer of customerRequestStatus.customers" value="{{customer.serviceRefNo}}">
+          {{customer.serviceRefNo}}
+        </option>
+      </select>
+      <div class="invalid-feedback" *ngIf="approvalForm.submitted && refNo.invalid && (refNo.dirty || refNo.touched)">
+        <div *ngIf="refNo.errors.required">Service Reference No. is required</div>
+      </div>
+    </div>
+    <div class="form-group">
+      <label for="response">Accept(A) / Reject(R)</label>
+      <select [(ngModel)]="adminApproval.response" class="form-control" name="response" #response="ngModel"
+        [ngClass]="{ 'is-invalid': approvalForm.submitted && response.invalid }" required>
+        <option value="A">A</option>
+        <option value="R">R</option>
+      </select>
+      <div class="invalid-feedback"
+        *ngIf="approvalForm.submitted && response.invalid && (response.dirty || response.touched)">
+        <div *ngIf="response.errors.required">Please select a response</div>
+      </div>
+    </div>
+    <div class="form-group">
+      <input type="submit" class="btn btn-primary" value="Confirm">
+    </div>
+  </form>
+  <div class="alert alert-warning" role="alert" *ngIf="approvalStatus">{{approvalMessage}}</div>
+</div>
+<div *ngIf="showSearchToggle" class="wrapper container" style="width: 20%;">
+  <p class="h3">Search</p>
+  <br>
+  <form (ngSubmit)="f.valid && search()" #f="ngForm">
+    <div class="form-group">
+      <label>Service Reference No.</label>
+      <input class="form-control" type="text" name="refNo1" [(ngModel)]="serviceReferenceNumber" #refNo1="ngModel"
+        [ngClass]="{ 'is-invalid': f.submitted && refNo1.invalid }" required pattern="^[0-9]{4}$">
+      <div class="invalid-feedback" *ngIf="f.submitted && refNo1.invalid && (refNo1.dirty || refNo1.touched)">
+        <div *ngIf="refNo1.errors.required">Service Reference No. is required</div>
+        <div *ngIf="refNo1.errors.pattern">Service Reference No. must be of 4 digits</div>
+      </div>
+    </div>
+    <div class="form-group">
+      <input type="submit" class="btn btn-primary" value="Search" style="width: 100%;">
+    </div>
+  </form>
+  <div class="alert alert-danger" *ngIf="wrongServicerefNo">Wrong Service Ref No.</div>
+  <div class="alert alert-danger" *ngIf="searchError">Unable to search</div>
+</div>
+<div *ngIf="searched && showSearchToggle" class="card border-dark mb-3 mx-auto" style="max-width: 40rem; margin-top: 20px;">
   <div class="card-header">{{generatedCustomer.customer.firstName}}'s Details</div>
   <div class="card-body">
     <p class="card-text">Service Reference Number: {{generatedCustomer.customer.serviceRefNo}}</p>
@@ -84,7 +86,7 @@
     <p class="card-text">Is Approved: {{generatedCustomer.customer.isApproved}}</p>
   </div>
 </div>
-<div class="scrollme">
+<div class="scrollme" *ngIf="requestsToggle">
   <table class="table table-striped table-bordered table-active table-responsive-md  text-nowrap">
     <thead style="background-color: #adb0c5;">
       <tr>
@@ -146,4 +148,3 @@
     </tbody>
   </table>
 </div>
-<br>
