--- a/banking-frontend-angular/src/app/login/login.component.html
+++ b/banking-frontend-angular/src/app/login/login.component.html
@@ -1,38 +1,3 @@
-<!-- <div class="page-header h1">
-    <p>HFDC Bank</p>
-</div> -->
-<!-- <div class="wrapper container">
-    <p class="h3">Login</p>
-    <br>
-    <p>Please fill in your credentials to login.</p>
-    <form [formGroup]="loginForm" (ngSubmit)="buildLoginForm()">
-        <div class="form-group">
-            <label>User ID</label>
-            <input formControlName="userId" class="form-control" type="text" name="userId"
-                placeholder="Your 6-digit user id">
-            <div *ngIf="loginForm.controls.userId.invalid && (loginForm.controls.userId.dirty || loginForm.controls.userId.touched)"
-                class="alert alert-danger">
-                <div *ngIf="loginForm.controls.userId.errors.required">User ID is required</div>
-                <div *ngIf="loginForm.controls.userId.errors.pattern">User ID must contain 6 digits</div>
-            </div>
-        </div>
-        <div class="form-group">
-            <label>Password</label>
-            <input formControlName="password" class="form-control" type="password" name="password"
-                placeholder="Your password">
-            <div *ngIf="loginForm.controls.password.invalid && (loginForm.controls.password.dirty || loginForm.controls.password.touched)"
-                class="alert alert-danger">
-                <div *ngIf="loginForm.controls.password.errors.required">Password is required</div>
-            </div>
-        </div>
-        <button type="submit" class="btn btn-primary" style="width: 100%;">Login</button>
-    </form>
-    <div class="forgot-options">
-        <p>Forgot User ID? <a href="">Click here</a>.</p>
-        <p>Forgot Password? <a href="">Click here</a>.</p>
-    </div>
-</div> -->
-
 <div class="wrapper container">
     <p class="h3">Login</p>
     <br>
@@ -42,8 +7,8 @@
         <div class="form-group">
             <label for="userId">User ID</label>
             <input class="form-control" type="text" name="id" placeholder="Your 6-digit user id"
-                [(ngModel)]="userLogin.userId" #id="ngModel" required pattern="^[0-9]{6}$">
-            <div class="alert alert-danger" *ngIf="loginForm.submitted && id.invalid && (id.dirty || id.touched)">
+                [(ngModel)]="userLogin.userId" #id="ngModel" [ngClass]="{ 'is-invalid': loginForm.submitted && id.invalid }" required pattern="^[0-9]{6}$">
+            <div class="invalid-feedback" *ngIf="loginForm.submitted && id.invalid && (id.dirty || id.touched)">
                 <div *ngIf="id.errors.required">User ID is required</div>
                 <div *ngIf="id.errors.pattern">User ID must be of 6 digits</div>
             </div>
@@ -51,8 +16,8 @@
         <div class="form-group">
             <label for="password">Password</label>
             <input class="form-control" type="password" name="pwd" placeholder="Your password" [(ngModel)]="userLogin.password"
-                #pwd="ngModel" required>
-            <div class="alert alert-danger" *ngIf="loginForm.submitted && pwd.invalid && (pwd.dirty || pwd.touched)">
+                #pwd="ngModel" [ngClass]="{ 'is-invalid': loginForm.submitted && pwd.invalid }" required>
+            <div class="invalid-feedback" *ngIf="loginForm.submitted && pwd.invalid && (pwd.dirty || pwd.touched)">
                 <div *ngIf="pwd.errors.required">Password is required</div>
             </div>
         </div>
