--- a/banking-frontend-angular/src/app/change-password/change-password.component.html
+++ b/banking-frontend-angular/src/app/change-password/change-password.component.html
@@ -6,10 +6,12 @@
             <label> Set Login Password</label>
             <input class="form-control" type="password" name="userPassword" 
             placeholder="Enter Password" [(ngModel)]="model.userPassword" #userPassword="ngModel"
-            [ngClass]="{ 'is-invalid': f.submitted && userPassword.invalid }" required minlength="8">
+            [ngClass]="{ 'is-invalid': f.submitted && userPassword.invalid }" required minlength="8"
+            pattern="(?=.*[a-z])(?=.*[A-Z])(?=.*[0-9])(?=.*[$@$!%*?&])[A-Za-z\d$@$!%*?&].{8,})">
             <div *ngIf="f.submitted && userPassword.invalid" class="invalid-feedback">
                 <div *ngIf="userPassword.errors.required">Password is required</div>
                 <div *ngIf="userPassword.errors.minlength">Password must be at least 8 characters</div>
+                <div *ngIf="userPassword.errors.pattern">Password pattern is not valid</div>
             </div>
         </div>
         <div class="form-group">
