set new password  done

--- a/banking-frontend-angular/src/app/account-summary/account-summary.component.css
+++ b/banking-frontend-angular/src/app/account-summary/account-summary.component.css
@@ -16,11 +16,14 @@ body {
     width: 46%;
     position: relative;
     margin: auto;
+    padding: 0%;
+    border: .2rem solid #428BCA;
 }
 
 .card{
    
     background-image: linear-gradient(to bottom right, #adb0c5, #d3dbe0, #adb0c5);
+    border-style: none;
 
 }
 .card-header{
