--- a/banking-frontend-angular/src/app/set-new-password/set-new-password.component.html
+++ b/banking-frontend-angular/src/app/set-new-password/set-new-password.component.html
@@ -1,19 +1,34 @@
- <div class="page-header h1">
-    <p>HFDC Bank</p>
+<div class="text-center">
+    <img src="/assets/images/hfdc-bank-logo.png" alt="hfdc-bank-logo" width="160" height="160">
 </div>
 <div class="wrapper container" style="width: 28%;">
     <h4>Set New Password</h4>
     <br>
 
-    <form #f="ngForm" (ngSubmit)="onSubmit()">
-        <div class="form-group" >
-            <label>Enter new Password</label>
-            <input type="password" class="form-control" name="newPassword">
+    <form class="form" name="form"#f="ngForm" (ngSubmit)="f.form.valid && onSubmit()" >
+        <div class="form-group">
+            <label> Set New Password </label>
+            <input class="form-control" type="password" name="newPassword" 
+            placeholder="Enter New Password" [(ngModel)]="model.newPassword" #newPassword="ngModel"
+            [ngClass]="{ 'is-invalid': f.submitted && newPassword.invalid }" required minlength="8"
+            pattern="(?=.*[a-z])(?=.*[A-Z])(?=.*[0-9])(?=.*[$@$!%*?&])[A-Za-z\d$@$!%*?&].{8,})">
+            <p class="font-italic"><small>*Atleast 8 characters long with UpperCase ,LowerCase ,digit ,special characters</small></p>
+            <div *ngIf="f.submitted && newPassword.invalid" class="invalid-feedback">
+                <div *ngIf="newPassword.errors.required">Password is required</div>
+                <div *ngIf="newPassword.errors.minlength">Password must be at least 8 characters</div>
+                <div *ngIf="newPassword.errors.pattern">Password pattern is not valid</div>
+            </div>
         </div>
 
-        <div class="form-group" >
-            <label>Confirm Password</label>
-            <input type="password" class="form-control" name="newPassword">
+        <div class="form-group">
+            <label> Confirm New Password</label>
+            <input class="form-control" type="password" name="cnewPassword" 
+            placeholder="Re-Enter Password" [(ngModel)]="model.cnewPassword"  #cnewPassword="ngModel"
+            [ngClass]="{ 'is-invalid': f.submitted && cnewPassword.invalid }" required>
+            <div *ngIf="f.submitted && cnewPassword.invalid" class="invalid-feedback">
+                <div *ngIf="cnewPassword.errors.required">Confirm Password is required</div>
+                <div *ngIf="cnewPassword.errors.shouldMatch">Passwords must match</div>
+            </div>
         </div>
         
          <button type="submit" class="btn btn-primary">Proceed</button>
