--- a/banking-frontend-angular/src/app/add-beneficiary/add-beneficiary.component.css
+++ b/banking-frontend-angular/src/app/add-beneficiary/add-beneficiary.component.css
@@ -12,39 +12,19 @@ body {
 
 .wrapper {
     /* background-color: #ecf4f3; */
+    position: relative;
     background-image: linear-gradient(to bottom right, #adb0c5, #d3dbe0, #adb0c5);
-    border: .2rem solid #7c7e8b;
-    margin-top: 28px;
+    border: .2rem solid #428BCA;
+    margin-left: 400px;
+    margin-bottom: 20px;
     border-radius: 10px;
     padding: 14px;
+    width: 600px;
 }
 
-a {
-    text-decoration: none;
-}
 
-a:hover {
-    opacity: 60%;
-    text-decoration: none;
-}
 
 input[type="text"], input[type="password"] {
     border: 1px solid #428BCA;
 }
 
-.btn {
-    background-color: white;
-    color: black;
-    border: 2px solid #7c7e8b;
-}
-
-.btn:hover {
-    background-color: #555555;
-    color: white;
-}
-
-.ben{
-    position: relative;
-    margin-left: 44%;
-    width: 36%;
-}
