--- a/banking-frontend-angular/src/app/user-profile/user-profile.component.html
+++ b/banking-frontend-angular/src/app/user-profile/user-profile.component.html
@@ -1,17 +1,17 @@
 <app-dashboard></app-dashboard>
 <div class="wrapper container">
     <div class="card border-dark w-100">
-            <div class="card-header">User Profile</div>
+            <div class="card-header"><h4>User Profile</h4></div>
             <div class="card-body">
-                <p class="card-text">Name: {{userProfileStatus.customer.title}} {{userProfileStatus.customer.firstName | uppercase}} {{userProfileStatus.customer.middleName | uppercase}} {{userProfileStatus.customer.lastName | uppercase}}</p>
-                <p class="card-text">Father's Name: {{userProfileStatus.customer.fatherName}}</p>
-                <p class="card-text">Mobile Number: {{userProfileStatus.customer.mobileNo}}</p>
-                <p class="card-text">Email Id: {{userProfileStatus.customer.emailId}}</p>
-                <p class="card-text">Aadhar Card Number: {{userProfileStatus.customer.aadhaarNo}}</p>
-                <p class="card-text">Date Of Birth: {{userProfileStatus.customer.dateOfBirth}}</p>
-                <p class="card-text">Occupation Type: {{userProfileStatus.customer.occupationType}}</p>
-                <p class="card-text">Source of Income: {{userProfileStatus.customer.sourceOfIncome}}</p>
-                <p class="card-text">Permanent Address: {{userProfileStatus.customer.perAddress.addressLine1}}, {{userProfileStatus.customer.perAddress.addressLine2}}, {{userProfileStatus.customer.perAddress.landmark}}, {{userProfileStatus.customer.perAddress.city}}, {{userProfileStatus.customer.perAddress.state}}</p>
+                <h5 class="card-text">Name: {{userProfileStatus.customer.title}} {{userProfileStatus.customer.firstName | uppercase}} {{userProfileStatus.customer.middleName | uppercase}} {{userProfileStatus.customer.lastName | uppercase}}</h5>
+                <h5 class="card-text">Father's Name: {{userProfileStatus.customer.fatherName}}</h5>
+                <h5 class="card-text">Mobile Number: {{userProfileStatus.customer.mobileNo}}</h5>
+                <h5 class="card-text">Email Id: {{userProfileStatus.customer.emailId}}</h5>
+                <h5 class="card-text">Aadhar Card Number: {{userProfileStatus.customer.aadhaarNo}}</h5>
+                <h5 class="card-text">Date Of Birth: {{userProfileStatus.customer.dateOfBirth}}</h5>
+                <h5 class="card-text">Occupation Type: {{userProfileStatus.customer.occupationType}}</h5>
+                <h5 class="card-text">Source of Income: {{userProfileStatus.customer.sourceOfIncome}}</h5>
+                <h5 class="card-text">Permanent Address: {{userProfileStatus.customer.perAddress.addressLine1}}, {{userProfileStatus.customer.perAddress.addressLine2}}, {{userProfileStatus.customer.perAddress.landmark}}, {{userProfileStatus.customer.perAddress.city}}, {{userProfileStatus.customer.perAddress.state}}</h5>
             </div>
     </div>
 </div>
